@@ -120,6 +120,10 @@ fostlib::http::user_agent::request::request(
     const string &method, const url &url, const boost::filesystem::wpath &data
 ) : m_data(new file_body(data)), method(method), address(url) {
 }
+fostlib::http::user_agent::request::request(
+    const string &method, const url &url, boost::shared_ptr< mime > mime_data
+) : m_data(mime_data), method(method), address(url) {
+}
 
 
 /*
